--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.30.0",
+    "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.9.0",
+    "@nextui-org/autocomplete": "^2.1.5",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "20.14.10",
     "@types/react": "18.3.3",
@@ -23,8 +30,10 @@
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^0.2.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "postcss": "8.4.39",
